Fixing button's display on small screens

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -39,6 +39,7 @@ table.ranking {
 div.alert {
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5);
   width: 101.4%;
+  margin-top: 1em;
 }
 
 .content {
@@ -53,6 +54,7 @@ div.alert {
 
 .main-content {
   padding-left: 2em;
+  padding-top: 1em;
   min-height: 42.3em;
 }
 
@@ -147,8 +149,20 @@ input {
 /****** questions *******/
 
 p.question {
-  font-size: 1.4em;
+  font-size: 1.2em;
   text-align: left;
+}
+
+p.question-text {
+  font-size: 1.2em;
+  text-align: left;
+  text-indent: 2em;
+}
+
+p.question-text-reference {
+  font-size: 0.8em;
+  text-decoration: italic;
+  text-align: right;
 }
 
 form .alternative input[type="radio"] {
@@ -225,4 +239,34 @@ form input#answer-btn {
     background: white;
     cursor: inherit;
     display: block;
+}
+
+.user-options,
+.upload-forms-container {
+  display: inline-block
+}
+
+.options-container,
+.content-container {
+  text-align: center;
+}
+
+.content-container {
+  margin-top: 4em;
+}
+
+.custom-img {
+  margin-bottom: 1.2em;
+}
+
+.question-img {
+  margin: auto;
+}
+
+.question-index p {
+  font-weight: 700;
+}
+
+.align-center {
+  text-align: center;
 }
